--- a/src/components/UI/Backdrop/Backdrop.module.scss
+++ b/src/components/UI/Backdrop/Backdrop.module.scss
@@ -9,9 +9,14 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    background: rgba(159, 186, 176, 0.40);
+    background: rgba(71, 71, 71, 0.7);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(17.5px);
-    -webkit-backdrop-filter: blur(17.5px);
+
+    @supports(backdrop-filter: blur(17.5px)) {
+        background: rgba(159, 186, 176, 0.40);
+        backdrop-filter: blur(17.5px);
+        -webkit-backdrop-filter: blur(17.5px);
+    }
+
     z-index: 190;
 }
