--- a/src/components/UI/Loader/Loader.module.scss
+++ b/src/components/UI/Loader/Loader.module.scss
@@ -9,10 +9,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(128, 128, 128, 0.2);
+    background: rgba(71, 71, 71, 0.7);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(17.5px);
-    -webkit-backdrop-filter: blur(17.5px);
+
+    @supports(backdrop-filter: blur(17.5px)) {
+        background: rgba(159, 186, 176, 0.40);
+        backdrop-filter: blur(17.5px);
+        -webkit-backdrop-filter: blur(17.5px);
+    }
+
     z-index: 200;
 
     .LdsDefault {
