--- a/src/components/UserProfile/EditProfile/EditProfile.module.scss
+++ b/src/components/UserProfile/EditProfile/EditProfile.module.scss
@@ -85,7 +85,7 @@
             }
 
 
-            input[type="file"]::-webkit-file-upload-button {
+            input[type="file"]::file-selector-button {
                 height: 100%;
                 background-color: $dark-blue;
                 border: none;
