--- a/src/pages/Patients/GroupPatients/GroupPatients.module.scss
+++ b/src/pages/Patients/GroupPatients/GroupPatients.module.scss
@@ -13,7 +13,7 @@
     @include pageNav;
 
     .Main {
-        overflow-x: scroll;
+        overflow-x: auto;
 
     }
 
